# rollercoaster

./: .gitattributes  .gitignore  Cargo.toml  curve_to_desmos.py  hi.json  hi2.json  hi4.json  parse_desmos.py
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml
gd/: Cargo.toml
gd/src/: lib.rs  logger.rs  persist.rs
gd/src/gd/: gd_coaster_curve.rs  gd_coaster_physics.rs  gd_coaster_point.rs  gd_optimizer.rs  mod.rs
godot/: Ext.gdextension  FloatEdit.tscn  Main.tscn  MainUI.tscn  anim.tscn  camera_3d.gd  control_point.gd  control_point.tscn  default_bus_layout.tres  easy_charts.svg.import  f_base.json  f_base2.json  float_edit.gd  hi.json  hi3.json  hi5.json  hib.json  hib_opt.json  icon.svg.import  label.tscn  line_edit.gd  main.gd  points.json  points2.json  points3.json  points4.json  points5.json  points_optim.json  problem.json  problem2_no_end.json  project.godot  utils.gd
godot/addons/easy_charts/: icon.svg.import
godot/addons/easy_charts/utilities/assets/: OpenSans-VariableFont_wdth,wght.ttf.import
godot/addons/easy_charts/utilities/icons/: linechart.svg.import
godot/components/: FloatEdit.tscn  ParamsManager.tscn  PointEditComponent.tscn  anim.tscn  control_point.gd  control_point.tscn  params_manager.gd  point_edit_component.gd
godot/ui/: FloatEdit.tscn  PointEditComponent.tscn  point_edit_component.gd
godot/util/: camera_3d.gd  utils.gd
ma/: manim.cfg  physics.py  scene.py
num_opt/: Cargo.toml
num_opt/src/: hermite.rs  lib.rs  main.rs  my_float.rs  optimizer.rs  physics.rs  plot.rs  point.rs  render.rs
num_opt/src/gd/: gd_coaster_curve.rs  gd_coaster_physics.rs  gd_coaster_point.rs  gd_optimizer.rs  mod.rs
num_opt/src/hermite/: matrix.rs  mod.rs  spline.rs
num_opt/src/physics/: geo.rs  geo_test.rs  info.rs  legacy.rs  linalg.rs  mod.rs  plot.rs  solver.rs
persist/: Cargo.toml
persist/src/: lib.rs
py/: Cargo.toml
src/: hermite.rs  main.rs  physics.rs
testbed/: Cargo.toml
testbed/benches/: my_benchmark.rs
testbed/src/: lib.rs  main.rs
xrtest/: data.gd  export_presets.cfg  icon.svg.import  main.gd  node_3d.tscn  openxr_action_map.tres  project.godot  utils.gd
