[workspace]

members = [
     "gd",
    "num_opt", "testbed", "py"
, "persist"]

[profile.dev]
opt-level = 3
debug = "full"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"
#lto = "fat"

[profile.unoptimized]
inherits = "dev"
opt-level = 0
debug = "full"
