[package]
name = "gd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num_opt = { path = "../num_opt" }
persist = { path = "../persist" }
godot = { version = "0.2.1", features = ["register-docs"] }
num-traits = "0.2.19"
nalgebra = "0.33.2"
rand = "0.8.5"
num = "0.4.3"
log = "0.4.22"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"

