[package]
name = "num_opt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]  # Compile this crate to a dynamic C library.

[dependencies]
getset = "0.1.3"
log = "0.4.22"
nalgebra = "0.33.2"
ndarray = "0.16.1"
num-traits = "0.2.19"
plotters = "0.3.7"
rand = "0.8.5"
roots = "0.0.8"
rug = { version = "1.26.1", features = ["num-traits"] }

[profile.dev.package."*"]
opt-level = 3
