[package]
name = "testbed"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
persist = { path = "../persist" }
num_opt = { path = "../num_opt" }
plotters = "0.3.7"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false


